fix: debug button visibility on safari

--- a/online-zoo/assets/styles/style.css
+++ b/online-zoo/assets/styles/style.css
@@ -218,6 +218,10 @@ a {
     outline: none;
 }       
 
+.fix-position {
+    position: relative;
+}
+
 /* Hero section */
 #hero-header {
     position: relative;
